[package]
name = "sample_planning"
version = "0.0.0"
authors = ["Yuan Liu <yuan6liu@gmail.com>"]
edition = "2018"

[dependencies]
# e2r = "0.10.0"
mazth = "0.5.0"
zpatial = "0.3.3"
chrono = "0.4"
# nom = "*"
log = "0.4.6"
# image = "*"
rand = "0.6.5"
pretty_env_logger = "0.3"
kiss3d = "0.18"
nalgebra = "0.17"
ncollide3d = ""
clap = "2.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
motion_primitives = []

[[bin]]
name = "planner"
path = "src/main.rs"

[[bin]]
name = "gen_obs"
path = "gen_obs/main.rs"

[[bin]]
name = "map2poly"
path = "map2poly/main.rs"