[package]
name = "sample_planning"
version = "0.0.2"
authors = ["Yuan Liu <yuan6liu@gmail.com>"]
edition = "2018"
description = "Sample Based Planner"
repository = "https://github.com/clearlycloudy/sample_planning/"
keywords = [ "planning", "sample", "rrt", "sst" ]
license = "MIT"
documentation = "https://docs.rs/crate/sample_planning/0.0.2/source/src"
readme = "README.md"

[dependencies]
mazth = "0.5.0"
zpatial = "0.3.3"
chrono = "0.4"
log = "0.4.6"
rand = "0.6.5"
pretty_env_logger = "0.3"
kiss3d = "0.18"
nalgebra = "0.17"
ncollide3d = "0.18"
clap = "2.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.0.3"
# crossbeam = "0.7"


[features]
motion_primitives = []
runge_kutta = []
disable_pruning = []
mo_prim_debug = []
mo_prim_thresh_low = []
mo_prim_thresh_high = []
nn_sample_log = []
nn_naive = []
disable_witness_disturbance = []
state_propagate_sample = []
batch_propagate_sample = []
path_optimize = []

[[bin]]
name = "planner"
path = "src/main.rs"

[[bin]]
name = "gen_obs"
path = "gen_obs/main.rs"

[[bin]]
name = "map2poly"
path = "map2poly/main.rs"